--- a/style.css
+++ b/style.css
@@ -9,13 +9,11 @@
     padding-right: 0;
 }
 
-/* .container{
-    max-width: 1440px;
-} */
 
 /* Header */
 
 header {
+    max-width: 100%;
     height: 100vh;
     background: url(img/intro_background.png) center no-repeat;
 }
@@ -34,7 +32,9 @@ header {
 }
 
 /* Navigation */
-
+.menu__icon{
+    display: none;
+}
 .header__navigations {
     list-style-type: none;
     padding-right: 50px;
@@ -315,19 +315,22 @@ header {
 }
 
 /* Gallery */
+
 .all__gallery {
     min-height: 300px;
 }
-.gallery__text{
+
+.gallery__text {
     color: #fff;
     font-size: 38px;
     font-weight: bold;
     text-align: center;
     width: 100%;
     height: 100%;
-    padding: 100px 10px ;
-    background-color: rgba(0,0,0, 0.8);
+    padding: 100px 10px;
+    background-color: rgba(0, 0, 0, 0.8);
 }
+
 .gallery_img1 {
     background-image: url(img/gallery1.png);
     background-repeat: no-repeat;
@@ -355,48 +358,58 @@ header {
     background-size: cover;
     max-width: 100%;
 }
-.gallery__text:hover{
-    background-color: rgba(45,154,196,0.8) ;
+
+.gallery__text:hover {
+    background-color: rgba(45, 154, 196, 0.8);
 }
+
 /* Team */
-.team{
+
+.team {
     height: 700px;
 }
 
-.all__team{
+.all__team {
     max-height: 100%;
     margin-top: 50px;
     margin-bottom: 50px;
 }
-.single__team{
+
+.single__team {
     text-align: center;
     max-height: 100%;
 }
-.team__title{
+
+.team__title {
     font-size: 72px;
     color: #000;
 }
-h2.team__title span{
+
+h2.team__title span {
     color: #2ebaee;
 }
-.team__img{
-  max-width: 180px;
+
+.team__img {
+    max-width: 180px;
     margin-top: 32px;
 }
-.team__name{
+
+.team__name {
     color: #242424;
     font-size: 34px;
     text-align: center;
     margin-top: 30px;
 }
-.team__position{
+
+.team__position {
     display: block;
     text-align: center;
     font-size: 14px;
     color: #878787;
     margin-top: 15px;
 }
-.team__btn{
+
+.team__btn {
     text-align: center;
     display: block;
     width: 150px;
@@ -411,77 +424,95 @@ h2.team__title span{
     text-decoration: none;
     margin: 30px auto;
 }
+
 .team__btn:hover {
     text-decoration: none;
     border: 1px solid #32a1cf;
     color: #32a1cf;
     background: transparent;
 }
+
 /* Contact */
-.form__bg{
+
+.form__bg {
     background-image: url(img/form_bg.png);
     background-repeat: no-repeat;
     background-position: center center;
     height: 100vh;
 }
-.contact{
+
+.contact {
     font-size: 52px;
     color: #fff;
     font-weight: bold;
     margin-top: 80px;
 }
-.contact__data{
+
+.contact__data {
     color: #878787;
     font-size: 20px;
 }
-.adress{
+
+.adress {
     color: #878787;
     font-size: 14px;
 }
-.contact__data span{
+
+.contact__data span {
     color: #32a1cf;
 }
-.contact__icons{
+
+.contact__icons {
     list-style-type: none;
     margin-top: 40px;
     padding: 0;
 }
-.contact__icons li{
+
+.contact__icons li {
     display: inline-block;
     width: 55px;
-   height: 55px;
+    height: 55px;
     border-radius: 27px;
     margin-right: 30px;
 }
-.contact__icon1{
+
+.contact__icon1 {
     background: #3b5998;
     padding: 15px 24px;
 }
-.contact__icon2{
+
+.contact__icon2 {
     background: #55acee;
     padding: 15px 18px;
 }
-.contact__icon3{
+
+.contact__icon3 {
     background: #cc2127;
     padding: 15px 20px;
 }
-.contact__icon4{
+
+.contact__icon4 {
     background: #dd4b39;
     padding: 15px 20px;
 }
-.contact__icon5{
+
+.contact__icon5 {
     background: #e23047;
     padding: 15px 18px;
 }
-.contact__icons li:hover{
+
+.contact__icons li:hover {
     background: rgba(130, 130, 130, 0.6);
     cursor: pointer;
 }
+
 /* Form */
-.form__bg form{
+
+.form__bg form {
     margin-top: 100px;
 }
-section.form__bg input[type = "text"], section.form__bg input[type = "email"]{
+
+.form__inputs input{
     width: 635px;
     height: 60px;
     background: none;
@@ -493,7 +524,8 @@ section.form__bg input[type = "text"], section.form__bg input[type = "email"]{
     padding-left: 30px;
     margin: 20px auto;
 }
-.form__bg textarea{
+
+.form__bg textarea {
     width: 635px;
     height: 200px;
     background: none;
@@ -506,7 +538,8 @@ section.form__bg input[type = "text"], section.form__bg input[type = "email"]{
     resize: none;
     margin: 20px auto;
 }
-.form__bg button{
+
+.form__bg button {
     text-align: center;
     display: block;
     width: 150px;
@@ -522,36 +555,194 @@ section.form__bg input[type = "text"], section.form__bg input[type = "email"]{
     text-decoration: none;
     margin: 30px auto;
 }
-.form__bg button:hover{
+
+.form__bg button:hover {
     color: #32a1cf;
     background: transparent;
 }
+
 /* Footer */
-footer{
+
+footer {
     height: 80px;
     background: #000;
     overflow: hidden;
     color: #fff;
 }
-footer ul li ,footer p{
+
+footer ul li, footer p {
     list-style-type: none;
     margin: 25px;
     padding: 0;
 }
-footer ul li{
+
+footer ul li {
     display: inline-block;
     margin-right: 10px;
 }
-footer ul li a{
+
+footer ul li a {
     font-size: 14px;
     text-decoration: none;
     color: #fff;
     font-weight: bold;
 }
-footer ul li a:hover{
+
+footer ul li a:hover {
     color: #fff;
-text-decoration: underline;
+    text-decoration: underline;
 }
-footer p{
+
+footer p {
     text-align: right;
 }
+
+@media (max-width: 768px) {
+    /* Header */
+    .header__logo {
+        padding-left: 10px;
+    }
+    .header__navigations {
+        list-style-type: none;
+        padding-right: 10px;
+        margin: 0;
+        padding-top: 0;
+    }
+    .header__navigations li {
+        display: inline-block;
+        padding-right: 10px;
+    }
+    /* Services */
+    .services__background {
+        background: #ffffff;
+    }
+    /* Notebook */
+    .all__notebook {
+        position: relative;
+        height: 550px;
+    }
+    .notebook__text {
+        position: absolute;
+        bottom: 0;
+        text-align: center;
+    }
+    .notebook {
+        position: absolute;
+        top: 0;
+    }
+    .notebook__btn {
+        margin: 0 auto;
+    }
+    /* Camera */
+    .camera__title {
+        color: #242424;
+    }
+    .camera__description {
+        color: #878787;
+    }
+    .camera__text {
+        text-align: center;
+    }
+    .camera__btn {
+        margin: 0 auto;
+    }
+    .camera__btn {
+        text-align: center;
+        display: block;
+        width: 150px;
+        height: 45px;
+        background: #32a1cf;
+        color: #fff;
+        border-radius: 24px;
+        font-weight: bold;
+        line-height: 44px;
+        font-size: 14px;
+        font-weight: bold;
+        text-decoration: none;
+        margin-top: 50px;
+    }
+    .camera__btn:hover {
+        text-decoration: none;
+        border: 1px solid #32a1cf;
+        color: #32a1cf;
+        background: transparent;
+    }
+    /* Man */
+    .man__text{
+   
+    }
+    .man__title{
+        max-width: 100%;
+    }
+    .man__description{
+        max-width: 100%;
+    }
+    /* Gallery */
+    .all__gallery{
+        margin-top: 500px;
+    }
+    /* form */
+    .all__form{
+        margin-top: 1300px;
+    }
+    .form__bg{
+        background:url(img/form_bg.png);
+        height: 880px;
+        
+    }
+    .form__inputs input{
+        max-width: 100%;
+    }
+    .form__inputs textarea{
+        max-width: 100%;
+    }
+    .contact{
+        margin-top: 20px;
+    }
+    /* Footer */
+    .footer__text{
+       margin: 0 auto;
+    }
+    .footer__menu{
+        display: none;
+    }
+    
+}
+@media (max-width: 575px) { 
+    .menu__icon{
+        display: block;
+        margin-right: 20px;
+        cursor: pointer;
+    }
+    .menu__icon div {
+       
+        width: 35px;
+        height: 5px;
+        background-color: white;
+        margin: 6px 0;
+        
+      }
+      .header__navigations{
+          display: none;
+      }
+      .intro__title{
+          margin-top: 20px;
+          font-size: 60px;
+      }
+      .intro__description{
+          font-size: 20px;
+      }
+      .all__intro{
+          max-height: 100%;
+      }
+      .all__form{
+        margin-top: 1500px;
+        
+    } 
+    .form__bg{
+        background:url(img/form_bg.png);
+        height: 1100px;
+    }
+
+ }
+
